src/wrapper_refcounted/torch_refcounted_api_generated.h

value atg__efficient_attention_backward(value grad_out_, value query, value key, value value_, value bias, value out, value cu_seqlens_q, value cu_seqlens_k, int64_t max_seqlen_q, int64_t max_seqlen_k, value logsumexp, double dropout_p, value philox_seed, value philox_offset, int64_t custom_mask_type, int bias_requires_grad, value scale, value num_splits_key, value window_size, int shared_storage_dqdkdv);
value atg__efficientzerotensor(value size, int options_kind, int options_device);
value atg__efficientzerotensor_out(value out, value size);
value atg__embedding_bag(value weight, value indices, value offsets, int scale_grad_by_freq, int64_t mode, int sparse, value per_sample_weights, int include_last_offset, int64_t padding_idx);
value atg__embedding_bag_backward(value grad, value indices, value offsets, value offset2bag, value bag_size, value maximum_indices, int64_t num_weights, int scale_grad_by_freq, int64_t mode, int sparse, value per_sample_weights, int64_t padding_idx);
value atg__embedding_bag_dense_backward(value grad, value indices, value offset2bag, value bag_size, value maximum_indices, int64_t num_weights, int scale_grad_by_freq, int64_t mode, value per_sample_weights, int64_t padding_idx);
value atg__embedding_bag_dense_backward_out(value out, value grad, value indices, value offset2bag, value bag_size, value maximum_indices, int64_t num_weights, int scale_grad_by_freq, int64_t mode, value per_sample_weights, int64_t padding_idx);
value atg__embedding_bag_forward_only(value weight, value indices, value offsets, int scale_grad_by_freq, int64_t mode, int sparse, value per_sample_weights, int include_last_offset, int64_t padding_idx);
value atg__embedding_bag_forward_only_out(value out0, value out1, value out2, value out3, value weight, value indices, value offsets, int scale_grad_by_freq, int64_t mode, int sparse, value per_sample_weights, int include_last_offset, int64_t padding_idx);
value atg__embedding_bag_out(value out0, value out1, value out2, value out3, value weight, value indices, value offsets, int scale_grad_by_freq, int64_t mode, int sparse, value per_sample_weights, int include_last_offset, int64_t padding_idx);
value atg__embedding_bag_per_sample_weights_backward(value grad, value weight, value indices, value offsets, value offset2bag, int64_t mode, int64_t padding_idx);
value atg__embedding_bag_per_sample_weights_backward_out(value out, value grad, value weight, value indices, value offsets, value offset2bag, int64_t mode, int64_t padding_idx);
value atg__embedding_bag_sparse_backward(value grad, value indices, value offsets, value offset2bag, value bag_size, int64_t num_weights, int scale_grad_by_freq, int64_t mode, value per_sample_weights, int64_t padding_idx);
value atg__empty_affine_quantized(value size, int options_kind, int options_device, double scale, int64_t zero_point);
value atg__empty_affine_quantized_out(value out, value size, double scale, int64_t zero_point);
value atg__empty_per_channel_affine_quantized(value size, value scales, value zero_points, int64_t axis, int options_kind, int options_device);
value atg__empty_per_channel_affine_quantized_out(value out, value size, value scales, value zero_points, int64_t axis);
value atg__euclidean_dist(value x1, value x2);
value atg__euclidean_dist_out(value out, value x1, value x2);
value atg__fake_quantize_learnable_per_channel_affine(value self, value scale, value zero_point, int64_t axis, int64_t quant_min, int64_t quant_max, double grad_factor);
value atg__fake_quantize_learnable_per_channel_affine_backward(value grad, value self, value scale, value zero_point, int64_t axis, int64_t quant_min, int64_t quant_max, double grad_factor);
value atg__fake_quantize_learnable_per_channel_affine_out(value out, value self, value scale, value zero_point, int64_t axis, int64_t quant_min, int64_t quant_max, double grad_factor);
value atg__fake_quantize_learnable_per_tensor_affine(value self, value scale, value zero_point, int64_t quant_min, int64_t quant_max, double grad_factor);
value atg__fake_quantize_learnable_per_tensor_affine_backward(value grad, value self, value scale, value zero_point, int64_t quant_min, int64_t quant_max, double grad_factor);
value atg__fake_quantize_learnable_per_tensor_affine_out(value out, value self, value scale, value zero_point, int64_t quant_min, int64_t quant_max, double grad_factor);
value atg__fake_quantize_per_tensor_affine_cachemask_tensor_qparams(value self, value scale, value zero_point, value fake_quant_enabled, int64_t quant_min, int64_t quant_max);
value atg__fake_quantize_per_tensor_affine_cachemask_tensor_qparams_out(value out0, value out1, value self, value scale, value zero_point, value fake_quant_enabled, int64_t quant_min, int64_t quant_max);
value atg__fft_c2c(value self, value dim, int64_t normalization, int forward);
value atg__fft_c2c_out(value out, value self, value dim, int64_t normalization, int forward);
value atg__fft_c2r(value self, value dim, int64_t normalization, int64_t last_dim_size);
value atg__fft_c2r_out(value out, value self, value dim, int64_t normalization, int64_t last_dim_size);
value atg__fft_r2c(value self, value dim, int64_t normalization, int onesided);
value atg__fft_r2c_out(value out, value self, value dim, int64_t normalization, int onesided);
value atg__fill_mem_eff_dropout_mask_(value self, double dropout_p, int64_t seed, int64_t offset);
value atg__flash_attention_backward(value grad_out, value query, value key, value value_, value out, value logsumexp, value cum_seq_q, value cum_seq_k, int64_t max_q, int64_t max_k, double dropout_p, int is_causal, value rng_state, value unused, value scale, value window_size_left, value window_size_right);
value atg__foobar(value self, int arg1, int arg2, int arg3);
value atg__foobar_out(value out, value self, int arg1, int arg2, int arg3);
value atg__functional_assert_async(value self, const char * assert_msg, value dep_token);
value atg__functional_assert_scalar(value self, const char * assert_msg, value dep_token);
value atg__functional_sym_constrain_range(value size, value min, value max, value dep_token);
value atg__functional_sym_constrain_range_for_size(value size, value min, value max, value dep_token);
void atg__fused_adagrad(value out, value self, value grads, value state_sums, value state_steps, double lr, double lr_decay, double weight_decay, double eps, int maximize, value grad_scale, value found_inf);
void atg__fused_adagrad_(value self, value grads, value state_sums, value state_steps, double lr, double lr_decay, double weight_decay, double eps, int maximize, value grad_scale, value found_inf);