src/bindings/torch_bindings_generated0.ml


  let stubs__efficient_attention_backward =
    foreign
      "atg__efficient_attention_backward"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> gc_tensor
       @-> double
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int
       @-> double
       @-> int
       @-> int64_t
       @-> int
       @-> int64_t
       @-> int
       @-> int
       @-> returning void)
  ;;

  let stubs__efficientzerotensor =
    foreign
      "atg__efficientzerotensor"
      (ptr int64_t @-> int @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs__efficientzerotensor_out =
    foreign
      "atg__efficientzerotensor_out"
      (gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs__embedding_bag =
    foreign
      "atg__embedding_bag"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> int64_t
       @-> int
       @-> gc_tensor
       @-> int
       @-> int64_t
       @-> returning void)
  ;;

  let stubs__embedding_bag_backward =
    foreign
      "atg__embedding_bag_backward"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int
       @-> int64_t
       @-> int
       @-> gc_tensor
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs__embedding_bag_dense_backward =
    foreign
      "atg__embedding_bag_dense_backward"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int
       @-> int64_t
       @-> gc_tensor
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs__embedding_bag_dense_backward_out =
    foreign
      "atg__embedding_bag_dense_backward_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int
       @-> int64_t
       @-> gc_tensor
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs__embedding_bag_forward_only =
    foreign
      "atg__embedding_bag_forward_only"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> int64_t
       @-> int
       @-> gc_tensor
       @-> int
       @-> int64_t
       @-> returning void)
  ;;

  let stubs__embedding_bag_forward_only_out =
    foreign
      "atg__embedding_bag_forward_only_out"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> int64_t
       @-> int
       @-> gc_tensor
       @-> int
       @-> int64_t
       @-> returning void)
  ;;

  let stubs__embedding_bag_out =
    foreign
      "atg__embedding_bag_out"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> int64_t
       @-> int
       @-> gc_tensor
       @-> int
       @-> int64_t
       @-> returning void)
  ;;

  let stubs__embedding_bag_per_sample_weights_backward =
    foreign
      "atg__embedding_bag_per_sample_weights_backward"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs__embedding_bag_per_sample_weights_backward_out =
    foreign
      "atg__embedding_bag_per_sample_weights_backward_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs__embedding_bag_sparse_backward =
    foreign
      "atg__embedding_bag_sparse_backward"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int
       @-> int64_t
       @-> gc_tensor
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs__empty_affine_quantized =
    foreign
      "atg__empty_affine_quantized"
      (ptr int64_t @-> int @-> int @-> int @-> double @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs__empty_affine_quantized_out =
    foreign
      "atg__empty_affine_quantized_out"
      (gc_tensor @-> ptr int64_t @-> int @-> double @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs__empty_per_channel_affine_quantized =
    foreign
      "atg__empty_per_channel_affine_quantized"
      (ptr int64_t
       @-> int
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__empty_per_channel_affine_quantized_out =
    foreign
      "atg__empty_per_channel_affine_quantized_out"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs__euclidean_dist =
    foreign "atg__euclidean_dist" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__euclidean_dist_out =
    foreign
      "atg__euclidean_dist_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__fake_quantize_learnable_per_channel_affine =
    foreign
      "atg__fake_quantize_learnable_per_channel_affine"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> int64_t
       @-> double
       @-> returning raw_tensor)
  ;;

  let stubs__fake_quantize_learnable_per_channel_affine_backward =
    foreign
      "atg__fake_quantize_learnable_per_channel_affine_backward"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> int64_t
       @-> double
       @-> returning void)
  ;;

  let stubs__fake_quantize_learnable_per_channel_affine_out =
    foreign
      "atg__fake_quantize_learnable_per_channel_affine_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> int64_t
       @-> double
       @-> returning raw_tensor)
  ;;

  let stubs__fake_quantize_learnable_per_tensor_affine =
    foreign
      "atg__fake_quantize_learnable_per_tensor_affine"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> double
       @-> returning raw_tensor)
  ;;

  let stubs__fake_quantize_learnable_per_tensor_affine_backward =
    foreign
      "atg__fake_quantize_learnable_per_tensor_affine_backward"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> double
       @-> returning void)
  ;;

  let stubs__fake_quantize_learnable_per_tensor_affine_out =
    foreign
      "atg__fake_quantize_learnable_per_tensor_affine_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> double
       @-> returning raw_tensor)
  ;;

  let stubs__fake_quantize_per_tensor_affine_cachemask_tensor_qparams =
    foreign
      "atg__fake_quantize_per_tensor_affine_cachemask_tensor_qparams"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> returning void)
  ;;

  let stubs__fake_quantize_per_tensor_affine_cachemask_tensor_qparams_out =
    foreign
      "atg__fake_quantize_per_tensor_affine_cachemask_tensor_qparams_out"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> returning void)
  ;;

  let stubs__fft_c2c =
    foreign
      "atg__fft_c2c"
      (gc_tensor @-> ptr int64_t @-> int @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs__fft_c2c_out =
    foreign
      "atg__fft_c2c_out"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__fft_c2r =
    foreign
      "atg__fft_c2r"
      (gc_tensor @-> ptr int64_t @-> int @-> int64_t @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs__fft_c2r_out =
    foreign
      "atg__fft_c2r_out"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs__fft_r2c =
    foreign
      "atg__fft_r2c"
      (gc_tensor @-> ptr int64_t @-> int @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs__fft_r2c_out =
    foreign
      "atg__fft_r2c_out"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__fill_mem_eff_dropout_mask_ =
    foreign
      "atg__fill_mem_eff_dropout_mask_"
      (gc_tensor @-> double @-> int64_t @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs__flash_attention_backward =
    foreign
      "atg__flash_attention_backward"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> double
       @-> int
       @-> gc_tensor
       @-> gc_tensor
       @-> double
       @-> int
       @-> int64_t
       @-> int
       @-> int64_t
       @-> int
       @-> returning void)
  ;;

  let stubs__foobar =
    foreign "atg__foobar" (gc_tensor @-> int @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs__foobar_out =
    foreign
      "atg__foobar_out"
      (gc_tensor @-> gc_tensor @-> int @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs__functional_assert_async =
    foreign
      "atg__functional_assert_async"
      (gc_tensor @-> string @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__functional_assert_scalar =
    foreign
      "atg__functional_assert_scalar"
      (scalar @-> string @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__functional_sym_constrain_range =
    foreign
      "atg__functional_sym_constrain_range"
      (scalar
       @-> int64_t
       @-> int
       @-> int64_t
       @-> int
       @-> gc_tensor
       @-> returning raw_tensor)
  ;;

  let stubs__functional_sym_constrain_range_for_size =
    foreign
      "atg__functional_sym_constrain_range_for_size"
      (scalar
       @-> int64_t
       @-> int
       @-> int64_t
       @-> int
       @-> gc_tensor
       @-> returning raw_tensor)
  ;;

  let stubs__fused_adagrad =
    foreign
      "atg__fused_adagrad"
      (ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> double
       @-> double
       @-> double
       @-> double
       @-> int
       @-> gc_tensor
       @-> gc_tensor
       @-> returning void)
  ;;

  let stubs__fused_adagrad_ =
    foreign
      "atg__fused_adagrad_"
      (ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> double
       @-> double
       @-> double
       @-> double
       @-> int
       @-> gc_tensor
       @-> gc_tensor
       @-> returning void)
  ;;
